--- a/login.html
+++ b/login.html
@@ -7,43 +7,34 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <script>
-        const allowedCountries = ["US", "GB", "CA", "AU", "DE", "NO", "SE", "CH", "NL", "FR", "DK", "IE", "NZ", "AT", "BE"];
-        async function strictSecurityCheck() {
-            try {
-                const response = await fetch('https://ipapi.co/json/');
-                const data = await response.json();
-                if (!allowedCountries.includes(data.country_code)) {
-                    blockUser("Access Denied!", "NT Survey is not available in your country.");
-                }
-            } catch (error) { console.error("Security failed."); }
-        }
-        function blockUser(title, message) {
-            document.body.innerHTML = `<div style="display:flex; justify-content:center; align-items:center; height:100vh; font-family:sans-serif; text-align:center; background:#121212; color:#fff;"><div style="background:#1e1e1e; padding:40px; border-radius:20px; border:2px solid #ff4444; max-width:400px;"><h1>${title}</h1><p>${message}</p></div></div>`;
-        }
-        strictSecurityCheck();
-    </script>
-
     <style>
+        /* Signup পেজের হুবহু CSS */
         body { margin: 0; padding: 0; display: flex; align-items: center; justify-content: center; min-height: 100vh; background-color: #f4f7f6; font-family: sans-serif; }
         .auth-card { width: 90%; max-width: 350px; background: white; padding: 30px; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
         h2 { text-align: center; margin-bottom: 25px; color: #2c3e50; }
-        .input-group input { display: block; width: 100%; margin-bottom: 20px; padding: 14px; box-sizing: border-box; border: 1px solid #ddd; border-radius: 8px; }
-        .btn { width: 100%; padding: 14px; background-color: #2c3e50; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; }
+        .input-group input { display: block; width: 100%; margin-bottom: 20px; padding: 14px; box-sizing: border-box; border: 1px solid #ddd; border-radius: 8px; font-size: 14px; }
+        .btn { width: 100%; padding: 14px; background-color: #2c3e50; color: white; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; font-size: 16px; transition: 0.3s; }
+        .btn:hover { background-color: #1a252f; }
+        a { color: #2c3e50; text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
     <div class="auth-card">
         <h2>Login</h2>
         <div class="input-group">
-            <input type="email" id="li_email" placeholder="Email">
+            <input type="email" id="li_email" placeholder="Email Address">
             <input type="password" id="li_pass" placeholder="Password">
         </div>
         <button class="btn" onclick="login()">Login</button>
-        <p style="text-align: center; margin-top: 20px; font-size: 14px;">New? <a href="signup.html" style="color: #2c3e50; font-weight: bold; text-decoration: none;">Sign up</a></p>
+        <p style="text-align: center; margin-top: 20px; font-size: 14px; color: #666;">
+            New? <a href="signup.html">Create Account</a>
+        </p>
     </div>
+
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+    
     <script src="config.js"></script>
     <script src="auth.js"></script>
 </body>
