--- a/withdraw.html
+++ b/withdraw.html
@@ -65,8 +65,9 @@
     </div>
 
     <nav class="nav-bar">
-        <a href="dashboard.html" class="nav-item"><i class="fas fa-home"></i>Home</a>
-        <a href="withdraw.html" class="nav-item active"><i class="fas fa-wallet"></i>Withdraw</a>
+        <a href="dashboard.html" class="nav-item active"><i class="fas fa-home"></i>Home</a>
+        <a href="profile.html" class="nav-item"><i class="fas fa-user-circle"></i>Profile</a>
+        <a href="withdraw.html" class="nav-item"><i class="fas fa-wallet"></i>Withdraw</a>
     </nav>
 
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
