--- a/policy.html
+++ b/policy.html
@@ -5,80 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy | NT Survey Platform</title>
     <style>
-        /* ব্যাকগ্রাউন্ড সাদা এবং টেক্সট কালো করা হয়েছে */
         body { 
-            font-family: Arial, sans-serif; 
-            line-height: 1.4; 
-            color: #000; 
-            background-color: #ffffff; 
+            font-family: 'Segoe UI', Arial, sans-serif; 
+            line-height: 1.6; 
+            color: #333; 
+            background-color: #f9f9f9; 
             max-width: 800px; 
             margin: 0 auto; 
             padding: 20px; 
         }
         .container { 
             background: #fff; 
-            padding: 10px; 
+            padding: 40px; 
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
         }
-        /* লেখার সাইজ ছোট করা হয়েছে */
         h1 { 
-            font-size: 18px; 
-            border-bottom: 1px solid #000; 
-            padding-bottom: 5px; 
+            font-size: 24px; 
+            color: #2c3e50;
+            border-bottom: 2px solid #eee; 
+            padding-bottom: 10px; 
         }
         h2 { 
-            font-size: 14px; 
-            margin-top: 20px; 
-            text-decoration: underline;
+            font-size: 18px; 
+            color: #2c3e50;
+            margin-top: 25px; 
         }
         p, li { 
-            font-size: 12px; 
-            margin-bottom: 8px; 
-            text-align: left; 
+            font-size: 14px; 
+            color: #555;
+            margin-bottom: 10px; 
         }
         ul { padding-left: 20px; }
         .back-link { 
             display: inline-block; 
-            margin-top: 20px; 
-            color: #000; 
-            text-decoration: underline; 
-            font-size: 12px;
+            margin-top: 30px; 
+            color: #3498db; 
+            text-decoration: none; 
+            font-weight: bold;
+            font-size: 14px;
         }
+        .back-link:hover { text-decoration: underline; }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Privacy Policy</h1>
-        <p><strong>Effective Date:</strong> December 2025</p>
-        <p>This Privacy Policy explains how NT Survey Platform collects, uses, and protects your personal information when you use our website. By creating an account, you agree to the terms outlined below.</p>
+        <p><strong>Last Updated:</strong> January 2026</p>
+        <p>Welcome to NT Survey Platform. We respect your privacy and are committed to protecting your personal data. This policy explains how we handle your information.</p>
 
         <h2>1. Information We Collect</h2>
         <ul>
-            <li><strong>Personal Data:</strong> We collect your name and email address during the registration process to identify your account.</li>
-            <li><strong>Technical Data:</strong> We automatically collect your IP address, browser type, and device information to monitor for security threats.</li>
-            <li><strong>Survey Progress:</strong> We track your completed tasks and coin balance to ensure accurate rewards.</li>
+            <li><strong>Personal Information:</strong> Name, email address, and country provided during registration.</li>
+            <li><strong>Technical Logs:</strong> IP address, device ID, and browser type for security and fraud prevention.</li>
+            <li><strong>Activity Data:</strong> Record of completed surveys and earned rewards (coins).</li>
         </ul>
 
-        <h2>2. How We Use Your Information</h2>
-        <p>We use your data strictly for operational purposes. This includes verifying your identity for withdrawals, preventing fraudulent activities, and providing customer support via WhatsApp or Email. We never sell your personal information to third-party advertisers.</p>
+        <h2>2. Data Usage & Security</h2>
+        <p>Your data is used solely to manage your account, process withdrawals, and ensure task accuracy. We use <strong>Firebase Encryption</strong> to secure your information. We do not sell or share your personal data with third-party marketing agencies.</p>
         
-        <h2>1.1 Cookies and Tracking</h2>
-<p>We use cookies to maintain your login session and to track survey completion via postback URLs. Third-party offerwalls may also use cookies to prevent duplicate task completions.</p>
+        <h2>3. Cookies & Tracking</h2>
+        <p>We use cookies to keep you logged in and to track successful task completions via Postback technology. Our partner offerwalls may use their own cookies to ensure you are rewarded correctly.</p>
 
-<h2>1.2 Children's Privacy</h2>
-<p>Our services are not intended for children under the age of 13. We do not knowingly collect personal data from anyone under 13.</p>
-        <h2>3. Data Security and Storage</h2>
-        <p>Your data is securely stored using Firebase Authentication and Database systems. While we implement strict security measures, please be aware that no transmission over the internet is completely immune to risks.</p>
+        <h2>4. Anti-Fraud & Compliance</h2>
+        <p>To maintain the integrity of our surveys, the use of <strong>VPN, Proxy, or multiple accounts</strong> is strictly prohibited. Detected fraud will lead to a permanent ban of your account and forfeiture of all coins.</p>
 
-        <h2>4. Strict Anti-Fraud Policy</h2>
-        <p>To protect our survey partners, we have a zero-tolerance policy for fraud. The use of VPNs, Proxies, or creating multiple accounts from the same device is strictly prohibited. Any detected violation will result in an immediate and permanent account ban without prior notice.</p>
+        <h2>5. User Rights (GDPR Compliance)</h2>
+        <p>You have the right to request access to your data or ask for account deletion at any time. To do so, please contact our support team.</p>
 
-        <h2>5. Third-Party Links and Offerwalls</h2>
-        <p>Our platform contains links to third-party offerwalls and survey providers. Once you click on these links, you are subject to their specific privacy policies. We are not responsible for the data collection practices of these external partners.</p>
+        <h2>6. Third-Party Services</h2>
+        <p>We utilize third-party offerwalls (like CPAGrip, CPAlead, etc.). By using their services, you agree to their respective privacy policies and terms of service.</p>
 
-        <h2>6. Contact Us</h2>
-        <p>If you have any questions regarding this policy, please contact us through our official support channels on the Contact page.</p>
+        <h2>7. Contact Support</h2>
+        <p>For any privacy-related concerns, please reach out to us via the Contact Us page or our official Telegram/WhatsApp support.</p>
 
-        <a href="dashboard.html" class="back-link">Return to Dashboard</a>
+        <a href="dashboard.html" class="back-link">← Return to Dashboard</a>
     </div>
 </body>
 </html>
